# RAS-project

./: README.md
impossible_object_pickup/: CMakeLists.txt  package.xml
impossible_object_pickup/src/: impossible_pickup_client.cpp  impossible_pickup_server.cpp  impossible_pickup_server.h
impossible_object_pickup/srv/: PickupImpossibleObject.srv
map_explorer/: CMakeLists.txt  package.xml
map_explorer/action/: Exploration.action
map_explorer/src/: explorer_client.cpp  explorer_server.cpp
map_representation/: CMakeLists.txt  package.xml
map_representation/launch/: launch_map.launch
map_representation/maps/: lab_maze_2018_2.txt
map_representation/rviz/: CMakeLists.txt  map_rviz.rviz  package.xml
map_representation/src/: MapRepresentation.cpp  MapRepresentation.h  map_representation_dev.cpp  map_representation_working.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/msg/: msg_objects_detected.msg
object_detection/scripts/: object_detector.py  object_detector_srv.py
object_detection/srv/: DetectObjectsImage.srv
occupancy_grid/: CMakeLists.txt  package.xml
occupancy_grid/launch/: launch_map.launch
occupancy_grid/maps/: Mapping.cpp  lab_maze_2018_3.txt
occupancy_grid/msg/: GridMap.msg  points_msg.msg
occupancy_grid/rviz/: deleteme.rviz  rviz_gridmap_path_planning.rviz
occupancy_grid/src/: AddToMap.cpp  AddToMap.h  GridMap.cpp  GridMap.h  Mapping.cpp  Mapping.h  OccupancyRegion.cpp  OccupancyRegion.h  occupancy_grid.txt  simple_grid_map_old.cpp
pure_pursuit_controller/: CMakeLists.txt  controller_params.yaml  package.xml
pure_pursuit_controller/action/: PurePursuit.action
pure_pursuit_controller/src/: LineSegment.cpp  LineSegment.h  pure_pursuit_client.cpp  pure_pursuit_server.cpp  speedTest.cpp
ransac/: CMakeLists.txt  package.xml
ransac/msg/: ransac_array.msg
ransac/scripts/: ransac.py
ras_battery_detection/: CMakeLists.txt  package.xml
ras_battery_detection/src/: BatterHollowV2_cloud_2.ply  BatteryDetection.cpp  BatteryDetection.h  BatteryHollow_2.ply  BatteryMUnit_cloud_2.ply  BatteryPCLDetection.cpp  BatteryPCLDetection.h  SimpleBatteryPCLDetection.cpp  SimpleBatteryPCLDetection.h  templateHollow.pcd  templateHollowV2.pcd  templateM.pcd  templateM.ply  templateMUnit.pcd
ras_gripper_controller/: CMakeLists.txt  package.xml
ras_gripper_controller/scripts/: GripperController.py
ras_gripper_controller/srv/: GripperCommand.srv
ras_launch/: CMakeLists.txt  exploration_test.rviz  global_parameters.yaml  grid.rviz  milestone1.rviz  milestone2.rviz  milestone2_1.rviz  milestone3.rviz  package.xml
ras_launch/launch/: explorationDebug.launch  grid.launch  localization.launch  mapping.launch  milestone3.launch  milestone4.launch  motors.launch  path_planning_execution.launch  speedTest.launch  test.launch
ras_localization/: CMakeLists.txt  README  package.xml  ransac.py
ras_localization/src/: Odometry.cpp  Odometry.h  ParticleFilter.cpp  ParticleFilter.h
ras_motor_controller/: CMakeLists.txt  motor_params.yaml  package.xml
ras_motor_controller/src/: MotorController.cpp  MotorController.h
ras_object_classification/: CMakeLists.txt  package.xml
ras_object_classification/scripts/: object_classification.py
ras_object_classification/srv/: ClassifyImage.srv
ras_object_decision_master/: CMakeLists.txt  package.xml
ras_object_decision_master/src/: object_decision_master.py
ras_object_detection/: CMakeLists.txt  package.xml
ras_object_detection/src/: ObjectPositionEstimation.cpp  ObjectPositionEstimation.h
ras_object_detection/srv/: EstimateObjectPosition.srv
ras_object_master/: CMakeLists.txt  package.xml
ras_object_master/msg/: ObjectMasterMsg.msg
ras_object_master/src/: ObjectMaster.cpp  ObjectMaster.h
ras_obstacle_detection/: CMakeLists.txt  package.xml
ras_obstacle_detection/src/: LidarObstacleDetection.cpp  LidarObstacleDetection.h  ObstacleDetection.cpp  ObstacleDetection.h
ras_path_planning/: CMakeLists.txt  package.xml
ras_path_planning/scripts/: astar.py  astar_debug.py
ras_path_planning/srv/: PathPlanningSrv.srv
ras_state_machine/: CMakeLists.txt  package.xml
ras_state_machine/action/: PurePursuit.action
ras_state_machine/scripts/: .statemachine_MS4.py.swp  persistant_storage.py  statemachine.py  statemachine_MS3.py  statemachine_MS4.py
ras_tf/: CMakeLists.txt  package.xml
ras_tf/src/: broadcaster.cpp
teleop_twist_keyboard/: teleop_twist_keyboard.py
