<package>
 <name>ras_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for RAS lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_launch</url>

  <author email="lmarson@kth.se">Luca Marson</author>
  <maintainer email="lmarson@kth.se">Luca Marson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ras_motor_controller</run_depend>

</package>
