<?xml version="1.0"?>
<package format="2">
  <name>ras_motor_controller</name>
  <version>0.0.0</version>
  <description>The ras_motor_controller package</description>

  <maintainer email="robbj@kth.se">Rob</maintainer>
  <maintainer email="khays@kth.se">Samir</maintainer>
  <maintainer email="lmarson@kth.se">Luca</maintainer>
  <maintainer email="wohler@kth.se">Daniel</maintainer>
  <maintainer email="robbanl@kth.se">Bob</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
